Initial layout draft

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,17 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+aidan:
+  name: Aidan Ewert
+  title: Research Lead & Co-Founder
+  url: https://www.linkedin.com/in/aidan-ewart-648a30204/
+  image_url: https://media.licdn.com/dms/image/D4E03AQH7DsgUq4aFWg/profile-displayphoto-shrink_800_800/0/1697468770646?e=1703116800&v=beta&t=IUcocG6Yog7VcEBJeviXrs80tr0sUSyMeLePtM8Z7lo
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+lucy:
+  name: Lucy Farnik
+  title: Research Lead & Co-Founder
+  url: https://www.linkedin.com/in/lucy-farnik/
+  image_url: https://media.licdn.com/dms/image/D4E03AQFjPP8Z2krXgw/profile-displayphoto-shrink_800_800/0/1675185850759?e=1701907200&v=beta&t=gkbOKuWdeQ1eureEkn9CoptxxXWRWeROkV83JlCFWBI
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+gaurav:
+  name: Gaurav Yadav
+  title: Research Lead & Co-Founder
+  url: https://www.linkedin.com/in/gaurayadav/
+  image_url: https://media.licdn.com/dms/image/D4D03AQGRWSI_qmKhUg/profile-displayphoto-shrink_800_800/0/1667520413208?e=1703116800&v=beta&t=yRnZPHZAF3yPHy6GOxwSLic-zSGMPL1Yix93bkDuze0
