Misc minor fixes

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -13,5 +13,5 @@ lucy:
 gaurav:
   name: Gaurav Yadav
   title: Research Lead & Co-Founder
-  url: https://www.linkedin.com/in/gaurayadav/
+  url: https://bristolaisafety.org/about#gaurav
   image_url: https://media.licdn.com/dms/image/D4D03AQGRWSI_qmKhUg/profile-displayphoto-shrink_800_800/0/1667520413208?e=1703116800&v=beta&t=yRnZPHZAF3yPHy6GOxwSLic-zSGMPL1Yix93bkDuze0
